--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#3498db" />
-    <link rel="website icon" type="png" href="https://j.top4top.io/p_2676j87ku1.png" />
-
+    <title>Halaman Website Saya</title>
+    <meta property="og:title" content="Personal Diary">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Tugas Learning-x Minggu 3 WR-103 Web Development Intermediate">
+    <meta property="og:image" content="{{url_for('static', filename='img/meta/meta-image.png')}}">
     <title>Personal Diary</title>
+
+    <link rel="website icon" type="png" href="https://j.top4top.io/p_2676j87ku1.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="{{url_for('static', filename='style/style.css')}}" />
     <!-- Import SweetAlert CSS -->
